# Final-Degree-Project

./: README.md
Backend/: pyproject.toml
Backend/openu_project_backend/: Responses.py  backend.py  config.py  main.py
Frontend/: .env  package-lock.json  package.json  tailwind.config.js
Frontend/prisma/: schema.prisma
Frontend/src/components/: Dropdown.jsx  ExpenseCategoryItem.js  ExpenseComponent.jsx  chart.tsx  date-filters.tsx  heading.tsx  pie-chart.tsx  radio-buttons.tsx
Frontend/src/lib/: prisma.ts  session-storage.ts  utils.js  utils.tsx
Frontend/src/pages/: index.tsx  login.tsx  login2.tsx
Frontend/src/pages/api/: auth.ts  expenses-per-month.ts  expenses-per-user.ts  expenses.ts  user-data.ts
Frontend/src/pages/bla/: [group_id].tsx  index.tsx
Frontend/src/pages/edit/: index.tsx
Frontend/src/pages/home/: index.tsx
Frontend/src/styles/: globals.css
Frontend/src/types/: products.ts  user.ts
OpenU-Project-BackEnd-noam/: README.md
OpenU-Project-BackEnd-noam/openu_project_backend/: Responses.py  config.py
